--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=dbd
 
-# Configuração do PostgreSQL
+# Configuracao do PostgreSQL
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
